CHATS_SIT/force-app/main/default/objects/batchsit_t_copay_calculation__x.object
<CustomObject>
    <description>batchsit$t_copay_calculation</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_copay_calculation</externalName>
    <fields>
        <fullName>amt_addon__c</fullName>
        <description>amt_addon</description>
        <externalDeveloperName>amt_addon</externalDeveloperName>
        <label>Add-On Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_fee_base_parent__c</fullName>
        <description>amt_fee_base_parent</description>
        <externalDeveloperName>amt_fee_base_parent</externalDeveloperName>
        <label>Base Parent Fee</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_calc_copay__c</fullName>
        <description>idn_calc_copay</description>
        <externalDeveloperName>idn_calc_copay</externalDeveloperName>
        <label>Parent Fee Calculation ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_copay_calculation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>percentage_max_value__c</fullName>
        <description>percentage_max_value</description>
        <externalDeveloperName>percentage_max_value</externalDeveloperName>
        <label>Maximum Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percentage_min_value__c</fullName>
        <description>percentage_min_value</description>
        <externalDeveloperName>percentage_min_value</externalDeveloperName>
        <label>Minimum Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Parent  Fee Calculation</label>
    <pluralLabel>Parent  Fee Calculation</pluralLabel>
</CustomObject>